cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
#
Description: |
  CloudFormation Template for Roman Numerals Converter Application. This template creates Python Flask Web Application on Amazon Linux 2023  EC2 Instance with custom security group allowing http connections on port 80 , 8080 and SSH connection on port 22. Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

Parameters:
  latestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

  keyName: 
    Description: Choose your key pair
    Type: AWS::EC2::KeyPair::KeyName
    Default: firstkey
  
  
Resources:

  prjctWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref latestAmiId
      InstanceType: t2.micro
      KeyName: !Ref keyName
      SecurityGroupIds: 
        - !Ref prjctSecGrp
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack

      UserData: !Base64 |
        #!/bin/bash
        dnf update -y
        dnf install python -y
        dnf install pip -y
        pip install Flask
        cd /home/ec2-user
        wget -P templates https://raw.githubusercontent.com/fhalearslnn/romen-number-conventer/main/templates/index.html
        wget -P templates https://raw.githubusercontent.com/fhalearslnn/romen-number-conventer/main/templates/result.html
        wget https://raw.githubusercontent.com/fhalearslnn/romen-number-conventer/main/roman-numerals-converter-app.py
        python3 roman-numerals-converter-app.py

  prjctSecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "ssh http and port 8080" # Required
      GroupName: "romen-sec-grp"
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
  
Outputs:
     WebsiteURL:
       Value: !Sub
         - http://${PIA}
         - PIA: !GetAtt prjctWebServer.PublicDnsName
       Description: Roman Numerals Converter Application URL
